# mine_c

./: .gitmodules  CMakeLists.txt  README.md
assets/: shader1.glsl  shader2.glsl
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: allocorexit.c  allocorexit.h  camera.c  camera.h  chunks.c  chunks.h  dynarray.c  dynarray.h  filereload.c  filereload.h  files.c  files.h  list.h  main.c  shader.c  shader.h  textures.c  textures.h
